// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductLeadBlock tests should render guarantees & warranties images & links on on about tab 1`] = `
<div>
  <div
    class="ProductLeadBlock"
  >
    <div
      class="Tabs-module_Tabs__qVSaa"
    >
      <div
        class="Tabs-module_TabsBar__iaTiJ"
      >
        <div
          class="Container-module_Container__4e9IW"
        >
          <div
            class="MuiContainer-root tabStyles-ContainerRoot-1 MuiContainer-maxWidthXl"
          >
            <div
              class="MuiTabs-root tabStyles-TabsRoot-2"
            >
              <div
                class="MuiTabs-scrollable"
                style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
              />
              <div
                class="MuiTabs-scroller MuiTabs-scrollable"
                style="margin-bottom: 0px;"
              >
                <div
                  aria-label="tabs"
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-controls="tabpanel-one"
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3 Mui-selected"
                    data-gtm="{\\"id\\":\\"selector-tabs1\\",\\"label\\":\\"MC: pdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                    id="tab-one"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      MC: pdp.leadBlock.about
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-controls="tabpanel-two"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3"
                    data-gtm="{\\"id\\":\\"selector-tabs1\\",\\"label\\":\\"MC: pdp.leadBlock.technicalSpecifications\\",\\"action\\":\\"Selector – Tabs\\"}"
                    id="tab-two"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      MC: pdp.leadBlock.technicalSpecifications
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-controls="tabpanel-three"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3"
                    data-gtm="{\\"id\\":\\"selector-tabs1\\",\\"label\\":\\"MC: pdp.leadBlock.documents\\",\\"action\\":\\"Selector – Tabs\\"}"
                    id="tab-three"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      MC: pdp.leadBlock.documents
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-4 PrivateTabIndicator-colorPrimary-5 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="tab-one"
        class="MuiGrid-root Tabs-module_TabPanel__YBHHf MuiGrid-item"
        heading="MC: pdp.leadBlock.about"
        id="tabpanel-one"
        role="tabpanel"
      >
        <div
          class="MuiBox-root MuiBox-root-8 Tabs-module_TabPanelBox__TIzx-"
        >
          <div
            class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
            >
              <div
                class="LeadBlock-module_LeadBlockContentSection__CUG63"
              >
                <div
                  class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-body1"
                />
              </div>
              <div
                class="GuaranteesAndAwardsAsset LeadBlock-module_LeadBlockContentSection__CUG63"
              >
                <h5
                  class="MuiTypography-root LeadBlock-module_LeadBlockContentHeading__VeQLQ Typography-module_Typography__aA2Zb MuiTypography-h5"
                >
                  MC: pdp.leadBlock.guaranteesWarranties
                </h5>
                <img
                  alt="Monier garanti 30 år"
                  class="image"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hbc/hd9/9009904058398/Monier-garanti-30-arjpg"
                />
                <img
                  alt="Test_Guarantee"
                  class="image"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h6c/hba/9021243785246/Test-Guaranteepng"
                />
                <div>
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover inline-link AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                    data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Read more about guarantees\\",\\"action\\":\\"http://localhost:8000/other\\"}"
                    type="button"
                  >
                    <span>
                      Read more about guarantees
                    </span>
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-module_icon__SvfZD"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.654 2.686-1.41 1.419L10.182 7H2v2h8.162L7.3 11.903l1.419 1.411L14 7.968 8.654 2.686z"
                      />
                    </svg>
                  </a>
                </div>
                <div>
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover inline-link AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                    data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Read more about Warranties\\",\\"action\\":\\"http://bmigroup.com\\"}"
                    type="button"
                  >
                    <span>
                      Read more about Warranties
                    </span>
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-module_icon__SvfZD"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.654 2.686-1.41 1.419L10.182 7H2v2h8.162L7.3 11.903l1.419 1.411L14 7.968 8.654 2.686z"
                      />
                    </svg>
                  </a>
                </div>
                <div>
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover inline-link AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                    data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"external\\",\\"action\\":\\"http://facebook.com\\"}"
                    type="button"
                  >
                    <span>
                      external
                    </span>
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-module_icon__SvfZD"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8.654 2.686-1.41 1.419L10.182 7H2v2h8.162L7.3 11.903l1.419 1.411L14 7.968 8.654 2.686z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="tab-two"
        class="MuiGrid-root Tabs-module_TabPanel__YBHHf MuiGrid-item"
        heading="MC: pdp.leadBlock.technicalSpecifications"
        hidden=""
        id="tabpanel-two"
        role="tabpanel"
      >
        <div
          class="MuiBox-root MuiBox-root-9 Tabs-module_TabPanelBox__TIzx-"
        >
          <div
            class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
            >
              <div
                class="ProductTechnicalSpec"
              >
                MC: pdp.noTechSpecMessage
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="tab-three"
        class="MuiGrid-root Tabs-module_TabPanel__YBHHf MuiGrid-item"
        heading="MC: pdp.leadBlock.documents"
        hidden=""
        id="tabpanel-three"
        role="tabpanel"
      >
        <div
          class="MuiBox-root MuiBox-root-10 Tabs-module_TabPanelBox__TIzx-"
        >
          <div
            class="document-library"
          >
            <div
              class="DocumentSimpleTableResults"
            >
              <div>
                <table
                  class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-no-color__pf1f2"
                >
                  <thead
                    class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        scope="col"
                      >
                        MC: documentLibrary.headers.type
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head table-header"
                        scope="col"
                      >
                        MC: documentLibrary.headers.download
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head table-header"
                        scope="col"
                      >
                        MC: documentLibrary.headers.add
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  />
                </table>
              </div>
            </div>
            <div
              class="DocumentResultsFooter"
            >
              <nav
                aria-label="pagination navigation"
                class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-11"
              >
                <ul
                  class="MuiPagination-ul"
                >
                  <li>
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-module_PaginationItem__NgRVx MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiPaginationItem-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-module_PaginationItem__NgRVx MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiPaginationItem-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </button>
                  </li>
                </ul>
              </nav>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                type="button"
              >
                <span>
                  MC: downloadList.clear
                </span>
              </a>
              <button
                class="MuiButtonBase-root MuiButton-root buttonStyles-root-12 MuiButton-contained buttonStyles-contained-14 MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label buttonStyles-label-15"
                >
                  MC: downloadList.download (0)
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <p
                class="MuiTypography-root RecaptchaPrivacyLinks Typography-module_Typography__aA2Zb MuiTypography-body1"
              >
                This site is protected by reCAPTCHA and the Google 
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                  href="https://policies.google.com/privacy"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <span>
                    Privacy Policy
                  </span>
                </a>
                 and 
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
                  href="https://policies.google.com/terms"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  <span>
                    Terms of Service
                  </span>
                </a>
                 apply.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductLeadBlock tests should render the fixing tool tab 1`] = `
<div
  aria-labelledby="tab-six"
  class="MuiGrid-root Tabs-module_TabPanel__YBHHf tab-container MuiGrid-item"
  data-testid="fixingTool"
  heading="MC: pdp.leadBlock.fixingTool"
  hidden=""
  id="tabpanel-six"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-126 Tabs-module_TabPanelBox__TIzx-"
  >
    <iframe
      class="assetsIframe fixing-tool-iframe"
      src="https://monier.service.bouwconnect.nl/"
    />
  </div>
</div>
`;

exports[`ProductLeadBlock tests should render the fixing tool tab with title and iframe 1`] = `
<div
  aria-labelledby="tab-six"
  class="MuiGrid-root Tabs-module_TabPanel__YBHHf tab-container MuiGrid-item"
  data-testid="fixingTool"
  heading="MC: pdp.leadBlock.fixingTool"
  hidden=""
  id="tabpanel-six"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-158 Tabs-module_TabPanelBox__TIzx-"
  >
    <h5
      class="MuiTypography-root heading Typography-module_Typography__aA2Zb MuiTypography-h5"
    >
      Fixing tool title
    </h5>
    <iframe
      class="assetsIframe fixing-tool-iframe"
      src="https://monier.service.bouwconnect.nl/"
    />
  </div>
</div>
`;

exports[`ProductLeadBlock tests should render the specification tab 1`] = `
<div
  aria-labelledby="tab-seven"
  class="MuiGrid-root Tabs-module_TabPanel__YBHHf tab-container MuiGrid-item"
  data-testid="specification"
  heading="MC: pdp.leadBlock.specification"
  hidden=""
  id="tabpanel-seven"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-221 Tabs-module_TabPanelBox__TIzx-"
  >
    <h5
      class="MuiTypography-root heading Typography-module_Typography__aA2Zb MuiTypography-h5"
    >
      Specification title
    </h5>
    <iframe
      class="assetsIframe specification-tab-iframe"
      src="https://monier.service.bouwconnect.nl/"
    />
  </div>
</div>
`;

exports[`ProductLeadBlock tests should render the technical draws tab 1`] = `
<div
  aria-labelledby="tab-five"
  class="MuiGrid-root Tabs-module_TabPanel__YBHHf MuiGrid-item"
  data-testid="technicalDrawings"
  heading="MC: pdp.leadBlock.technicalDrawings"
  hidden=""
  id="tabpanel-five"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-63 Tabs-module_TabPanelBox__TIzx-"
  >
    <div
      class="MuiGrid-root LeadBlock-module_LeadBlock__FSWP0 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
      >
        <div
          class="LeadBlock-module_LeadBlockContentSection__CUG63"
        >
          <div
            class="ImageGallery-module_ImageGallery__IY-1c"
          >
            <div
              class="ImageGallery-module_image-wrapper__O9qhN"
            >
              <img
                alt="490189 wireløper"
                class="ImageGallery-module_main-image-wrapper__muxiV ImageGallery-module_main-image-wrapper--default__blBAJ Media-module_Media__GKPD2 Media-module_Media--contain__O6qQ4"
                src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h62/he9/9009920704542/Product-Hero-Small-Desktop-Tablet-490189-wireloperjpg"
              />
            </div>
            <div
              class="ImageGallery-module_thumbnails__hJEUD"
            >
              <button
                class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--left__QzW7b ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--left__YslS3"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--right__Ze5Sy ImageGallery-module_thumb-scroller--hidden__GIXCG ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--right__0-QGE"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <div
                class="ImageGallery-module_scroller__pD0qV"
                style="margin-right: 0%;"
              >
                <button
                  class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--selected__zPXWJ Thumbnail-module_Thumbnail--large__UGNHe"
                  style="background-image: url(https://bmipimngqa.azureedge.net/sys-master-hybris-media/h53/he3/9009920573470/Product-Color-Selector-Mobile-490189-wireloperjpg);"
                  tabindex="0"
                  type="button"
                >
                  <img
                    alt="490189 wireløper"
                    class="Media-module_Media__GKPD2"
                    src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h62/he9/9009920704542/Product-Hero-Small-Desktop-Tablet-490189-wireloperjpg"
                  />
                </button>
                <button
                  class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--large__UGNHe"
                  style="background-image: url(https://bmipimngqa.azureedge.net/sys-master-hybris-media/h3b/h2a/9009919852574/Product-Color-Selector-Mobile-Icopal-staltakrenne-miljobilde-3jpg);"
                  tabindex="0"
                  type="button"
                >
                  <img
                    alt="Print_490189 wireløper"
                    class="Media-module_Media__GKPD2"
                    src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h7b/h26/9009919983646/Product-Hero-Small-Desktop-Tablet-Icopal-staltakrenne-miljobilde-3jpg"
                  />
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
